<resources>
    <string name="app_name">SVRmaps</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZXBpY3VzIiwiYSI6ImNrbzRubnJ1YjFremsycXBnczk0ZnV0NWYifQ.kR8J7q7vH7sqI9U5vdF-rA</string>

    <string name="tv_search">Search</string>
    <string name="tv_maps_title">SVRmaps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_sign_up">Регистрация</string>
    <string name="tv_sign_up_description">Зарегистрируйся в приложении. Желающих обмениваться предметами гораздо больше, чем тебе кажется!</string>
    <string name="tv_email">Email</string>
    <string name="tv_name">Имя</string>
    <string name="tv_nickname">Никнейм</string>
    <string name="tv_password">Пароль</string>
    <string name="tv_repeat_password">Повторите пароль</string>
    <string name="btn_sign_up">Зарегистрироваться</string>
    <string name="tv_have_account_sign_in">Есть аккаунт? Войти</string>
    <string name="tv_sign_in">Авторизация</string>
    <string name="tv_sign_in_description">Войди в приложение и получи доступ к карте обменов предметами!</string>
    <string name="btn_sign_in">Войти</string>
    <string name="btn_no_account_sign_up">Нет аккаунта? Зарегистрироваться</string>
    <string name="exchange">Карта обменов</string>
    <string name="add_new_subject">Предложить обмен</string>
    <string name="profile">Мой профиль</string>
    <string name="tv_add_subject_title">Предложить обмен</string>
    <string name="tv_add_subject_desc">Есть ненужный предмет? Предложи окружающим обменять его, наверняка у них есть то, что предложить взамен</string>
    <string name="tv_subject_name">Название предмета</string>
    <string name="tv_subject_description">Описание предмета</string>
    <string name="btn_add_subject">Создать</string>
    <string name="tv_current_account_title">Текущий аккаунт</string>
    <string name="btn_sign_out">Выйти из аккаунта</string>
    <string name="tv_active_subjects">Ваши объявления:</string>
    <string name="tv_exchange_suggestions">Согласованные обмены:</string>
    <string name="tv_exhange_offer">Предложение обмена</string>
    <string name="tv_make_exchange">Совершить обмен</string>
    <string name="tv_exchange_user">Пользователь</string>
    <string name="not_selected">Ничего не выбрано</string>
    <string name="tv_subject_offer">Предмет на обмен</string>
    <string name="tv_select_subject">Выберите ваш предмет</string>
    <string name="tv_offer_creation_success">Предложение обмена успешно отправлено!</string>
    <string name="tv_offer_creation_success_desc">Перейдите в профиль чтобы увидеть, согласился ли человек на обмен</string>
    <string name="btn_go_to_profile">Перейти в профиль</string>
    <string name="btn_create_route">Построить маршрут</string>
    <string name="tv_add_subject_success">Вы успешно выставили предмет на обмен!</string>
    <string name="tv_add_subject_success_desc">Перейдите к карте обменов чтобы найти что-то нужное для себя</string>
    <string name="btn_go_to_map">Перейти к карте</string>
</resources>