<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.sign_up.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:orientation="vertical"
        android:background="@color/primaryColor"
        android:elevation="24dp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="@dimen/screen_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/H1"
            android:text="@string/tv_sign_up"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Subtitle3"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:text="@string/tv_sign_up_description"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/screen_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Caption4"
                android:text="@string/tv_email"
                android:layout_marginTop="24dp"
                android:textColor="@color/secondary_text"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/bg_sign_up_edit_text"
                android:paddingVertical="4dp"
                android:textAppearance="@style/Body1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Caption4"
                android:text="@string/tv_name"
                android:layout_marginTop="16dp"
                android:textColor="@color/secondary_text"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/bg_sign_up_edit_text"
                android:paddingVertical="4dp"
                android:textAppearance="@style/Body1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Caption4"
                android:text="@string/tv_nickname"
                android:layout_marginTop="16dp"
                android:textColor="@color/secondary_text"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/bg_sign_up_edit_text"
                android:paddingVertical="4dp"
                android:textAppearance="@style/Body1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Caption4"
                android:text="@string/tv_password"
                android:layout_marginTop="16dp"
                android:textColor="@color/secondary_text"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/bg_sign_up_edit_text"
                android:paddingVertical="4dp"
                android:textAppearance="@style/Body1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Caption4"
                android:text="@string/tv_repeat_password"
                android:layout_marginTop="16dp"
                android:textColor="@color/secondary_text"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/bg_sign_up_edit_text"
                android:paddingVertical="4dp"
                android:textAppearance="@style/Body1"/>

        </LinearLayout>

        <Button
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_corners_12dp"
            android:text="@string/btn_sign_up"
            android:textAppearance="@style/Subtitle3"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/tv_have_account_sign_in"
            android:layout_marginBottom="56dp"
            app:cornerRadius="12dp"
            android:textAppearance="@style/Subtitle3"
            app:strokeColor="@color/primaryColor"
            app:strokeWidth="1dp"/>

    </LinearLayout>

</LinearLayout>