<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        style="@style/Caption2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_exchange_user"
        android:textColor="@color/secondary_text" />

    <TextView
        android:id="@+id/subjectUserName"
        style="@style/Subtitle3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="ivanov@gmail.com"
        android:layout_marginTop="4dp"
        android:textColor="@color/primary_text"/>

    <TextView
        style="@style/Caption2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_subject_name"
        android:textColor="@color/secondary_text" />

    <TextView
        android:id="@+id/subjectName"
        style="@style/Subtitle3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        tools:text="Билет в кино"
        android:textColor="@color/primary_text"/>

    <TextView
        style="@style/Caption2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_subject_offer"
        android:textColor="@color/secondary_text" />

    <TextView
        android:id="@+id/yourSubjectName"
        style="@style/Subtitle3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        tools:text="Билет в кино"
        android:textColor="@color/primary_text"/>

    <Button
        android:id="@+id/btnCreateRoute"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_button_corners_12dp"
        android:text="@string/btn_create_route"
        android:textSize="15sp"/>

    <include layout="@layout/view_divider"/>

</LinearLayout>