<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.exchange.ExchangeOfferSuccessFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="192dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_ok_big" />

        <TextView
            style="@style/H2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:text="@string/tv_add_subject_success" />

        <TextView
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/tv_add_subject_success_desc"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGoToMap"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_button_corners_12dp"
        android:text="@string/btn_go_to_map"
        android:layout_marginBottom="24dp"
        android:layout_marginHorizontal="@dimen/screen_horizontal_margin"
        android:textSize="15sp"/>


</LinearLayout>