<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.add_subject.AddSubjectFragment">

    <ScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primaryColor"
                android:elevation="24dp"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/screen_horizontal_margin"
                android:paddingVertical="20dp">

                <TextView
                    style="@style/H1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_add_subject_title"
                    android:textColor="@color/white" />

                <TextView
                    style="@style/Subtitle3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tv_add_subject_desc"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/screen_horizontal_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Caption2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/tv_subject_name"
                        android:textColor="@color/secondary_text" />

                    <EditText
                        android:id="@+id/etSubjectName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/bg_sign_up_edit_text"
                        android:paddingVertical="10dp"
                        android:paddingHorizontal="10dp"
                        android:inputType="textEmailAddress"/>

                    <TextView
                        style="@style/Caption2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/tv_subject_description"
                        android:textColor="@color/secondary_text" />

                    <EditText
                        android:id="@+id/etSubjectDescription"
                        android:layout_width="match_parent"
                        android:layout_height="128dp"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/bg_sign_up_edit_text"
                        android:paddingVertical="10dp"
                        android:paddingHorizontal="10dp"
                        android:inputType="textPassword"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnCreate"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="@dimen/screen_horizontal_margin"
        android:background="@drawable/bg_button_corners_12dp"
        android:text="@string/btn_add_subject"
        android:textSize="15sp"/>

</LinearLayout>