<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <ScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primaryColor"
                android:elevation="24dp"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/screen_horizontal_margin"
                android:paddingVertical="20dp">

                <TextView
                    style="@style/Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_current_account_title"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvEmail"
                    style="@style/H2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:text="ivanov@gmail.com"
                    android:textColor="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignUp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:text="@string/btn_sign_out"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="16dp"
                    app:cornerRadius="12dp"
                    app:strokeColor="@color/white"
                    app:strokeWidth="1dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/screen_horizontal_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Body2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/tv_exchange_suggestions"
                        android:textColor="@color/secondary_text" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/subjectsRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        tools:itemCount="1"
                        tools:listitem="@layout/item_approved_exchange" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>